Yaml store integration on polydata